--- a/ExamenDAO/ExamenDAO.csproj
+++ b/ExamenDAO/ExamenDAO.csproj
@@ -47,6 +47,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="ParseHelper.cs" />
     <Compile Include="PronosticoCiudadesDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
